--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Downtown Tire And Wheel - Serving the Downtown Los Angeles Area</title>
+<meta name="description" content="Downtown Tire and Wheel has been serving the Downtown LA community since 2010.  We focus on providing excellent customer service and honest pricing."/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -94,7 +95,7 @@
           <div class="hero-unit">
             <h1>Downtown Tire and Wheel</h1>
             <h3>Since 2010, serving the Downtown community with honest pricing and excellent customer service</h3>
-            <div class="slider-actions text-center"> <a href="#contact" class="btn btn-success btn-lg">Find Us Now </a> <a href="#services" class="btn btn-primary btn-lg">Our Services</a> </div>
+            <div class="slider-actions text-center"> <a href="#contact" class="btn btn-success btn-lg">Find Us Now </a> <a href="#about-us" class="btn btn-primary btn-lg">Our Services</a> </div>
           </div>
         </li>
         <li>
@@ -133,7 +134,7 @@
       <div class="img-thumbnail"> <img src="images/support_img.png" width="85" height="88" alt="secure">
         <div class="caption">
           <h4>Customer Support</h4>
-          <p>We promise to take the time to answer all your questions and handle your car as if it was our own. In order to keep our pricing as competitive as possible, please <a href='tel:213 490 9430'>call the shop for our lowest prices</a>.</p>
+          <p>We promise to take the time to answer all your questions and handle your car as if it was our own. In order to keep our pricing as competitive as possible, please <a href='tel:213 239 9795'>call the shop for our lowest prices</a>.</p>
         </div>
       </div>
     </div>
@@ -248,24 +249,37 @@
   </div>-->
 </div>
   <!--============== Partners List ==============-->
-<div class="brands">
+<div class="brands" id="brands">
   <div class="container">
     <div class="row PartnersList">
       <h1>Brands We Carry</h1>
       <h3>Just a sample of the quality brands we provide.</h3>
       <div class="brands-carousel">
-        <img src="images/brands/2crave.png" alt="logo">
-        <img src="images/brands/bigbang.png" alt="logo">
-        <img src="images/brands/blaquediamond.png" alt="logo">
-        <img src="images/brands/diablo.png" alt="logo">
-        <img src="images/brands/dub.png" alt="logo">
-        <img src="images/brands/fuel.png" alt="logo">
-        <img src="images/brands/gianelle.png" alt="logo">
-        <img src="images/brands/heavyhitters.png" alt="logo">
-        <img src="images/brands/kokokuture.png" alt="logo">
-        <img src="images/brands/kokosolid.png" alt="logo">
-        <img src="images/brands/niche.png" alt="logo">
-        <img src="images/brands/sporza.png" alt="logo">
+        <img src="images/brands/michelin.png" alt="Michelin logo">
+        <img src="images/brands/hankook.png" alt="Hankook logo">
+        <img src="images/brands/continental.png" alt="Continental logo">
+        <img src="images/brands/goodyear.png" alt="Goodyear logo">
+        <img src="images/brands/pirelli.png" alt="Pirelli logo">
+        <img src="images/brands/kumho.png" alt="Kumho logo">
+        <img src="images/brands/bfgoodrich.png" alt="BF Goodrich logo">
+        <img src="images/brands/dunlop.png" alt="Dunlop logo">
+        <img src="images/brands/bridgestone.png" alt="Bridgestone logo">
+        <img src="images/brands/general.png" alt="General Tire logo">
+        <img src="images/brands/2crave.png" alt="2 Crave logo">
+        <img src="images/brands/bigbang.png" alt="Big Bang logo">
+        <img src="images/brands/blaquediamond.png" alt="Blaque Diamond logo">
+        <img src="images/brands/diablo.png" alt="Diablo logo">
+        <img src="images/brands/dub.png" alt="Dub logo">
+        <img src="images/brands/fuel.png" alt="Fuel logo">
+        <img src="images/brands/gianelle.png" alt="Gianelle logo">
+        <img src="images/brands/heavyhitters.png" alt="Heavy Hitters logo">
+        <img src="images/brands/kokokuture.png" alt="Koko Kuture logo">
+        <img src="images/brands/kokosolid.png" alt="Koko Solid logo">
+        <img src="images/brands/niche.png" alt="Niche logo">
+        <img src="images/brands/sporza.png" alt="Sporza logo">
+        <img src="images/brands/kmc.png" alt="KMC logo">
+        <img src="images/brands/versus.png" alt="Versus logo">
+        <img src="images/brands/zenetti.png" alt="Zenetti logo">
       </div>
     </div>
   </div>
@@ -493,16 +507,16 @@
           <address>
           1225 E 7th St<br>
           Los Angeles, CA<br>
-          90002<br>
-          <abbr>Phone:</abbr> <a href="tel:213 490 9430">213 490 9430</a><br>
+          90021<br>
+          <abbr>Phone:</abbr> <a href="tel:213 239 9795">213 239 9795</a><br>
           <br>
           </address>
         </div>
         <div class="col-sm-6">
           <h4> Hours of Operation</h4>
-          <p>
-          Monday thru Satuday 7AM - 5PM<br>
-          Closed on Sundays &amp; Major Holidays</p>
+          <p>Mon to Fri 8AM - 7PM<br>
+          Sat 9AM - 5PM<br>
+          Sun 10AM - 4PM</p>
         </div>
       </div>
       <div class="row">
@@ -543,14 +557,15 @@
       <div class="col-md-2">
         <p>CALL US</p>
         <ul>
-          <li><a href="tel:213 490 9430">213 490 9430</a></li>
+          <li><a href="tel:213 239 9795">213 239 9795</a></li>
         </ul>
       </div>
       <div class="col-md-2">
         <p>HOURS OF OPERATION</p>
         <ul>
-          <li>Monday thru Saturday 7AM - 5PM</li>
-          <li>Closed Sundays</li>
+          <li>Mon to Fri 8AM - 7PM</li>
+          <li>Sat 9AM - 5PM </li>
+          <li>Sun 10AM - 4PM</li>
         </ul>
       </div>
       <div class="col-md-2">
@@ -613,20 +628,19 @@
 <!--==========ONE PAGE SCROLLING SCRIPTS STARTS===============-->
 
 <script>
-            $(function() {
-                $('.nav li a').bind('click',function(event){
-                    var $anchor2 = $(this).parent();
-				    var $anchor = $(this);
-					$('.nav  li').removeClass('active');
-                    $anchor2.addClass('active');
-
-                    $('html, body').stop().animate({
-                        scrollTop: $($anchor.attr('href')).offset().top - 80
-                    }, 1500,'easeInOutExpo');
-                    event.preventDefault();
-                });
-            });
-        </script>
+  $(function() {
+    $('.nav li a, .slider-actions a').bind('click',function(event){
+      var $anchor2 = $(this).parent();
+			var $anchor = $(this);
+			$('.nav  li').removeClass('active');
+      $anchor2.addClass('active');
+      $('html, body').stop().animate({
+        scrollTop: $($anchor.attr('href')).offset().top - 80
+        }, 1500,'easeInOutExpo');
+      event.preventDefault();
+    });
+  });
+</script>
 
 <!--=============ONE PAGE SCROLLING SCRIPTS ENDS============-->
 
@@ -653,7 +667,7 @@
 
 <!--=============BACK TO TOP ENDS============-->
 
-<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script
 <script type="text/javascript">
 var $_Tawk_API={},$_Tawk_LoadStart=new Date();
 (function(){
